Fix sidebar on smaller didplays

--- a/app/assets/stylesheets/administrate/_simple-sidebar.scss
+++ b/app/assets/stylesheets/administrate/_simple-sidebar.scss
@@ -61,7 +61,6 @@
     margin: 0;
     padding-top: 5px;
     list-style: none;
-    padding-bottom:200px;
 }
 
 
@@ -134,6 +133,14 @@
         position: relative;
         margin-right: 0;
     }
+}
+
+
+@media(max-width:768px) {
+.sidebar-nav {
+ padding-bottom:200px;
+}
+
 }
 
 /*Custom additions to Sidebar*/
